yaml/deployment-audit-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-service
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
      - name: audit-service
        image: sidartasilva/audit-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5701
        - containerPort: 8089

---
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  type: NodePort
  selector:
    app: audit-service
  ports:
  - name: hazelcast
    port: 5701
  - name: app
    port: 8089
