yaml/deployment-micro-trader-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-trader-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-trader-dashboard
  template:
    metadata:
      labels:
        app: micro-trader-dashboard
    spec:
      containers:
      - name: micro-trader-dashboard
        image: sidartasilva/micro-trader-dashboard:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5701
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: micro-trader-dashboard
spec:
  type: LoadBalancer
  selector:
    app: micro-trader-dashboard
  ports:
  - name: hazelcast
    port: 5701
  - name: app
    port: 8090
