yaml/ingress-quote-generator.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing-quote-generator
spec:
  rules:
    - host: quote-generator-reactive-microservices.sidartasilva.io
      http:
        paths:
          - path: /
            backend:
              serviceName: quote-generator
              servicePort: 8080
